--- a/estilos/style.css
+++ b/estilos/style.css
@@ -34,6 +34,7 @@ body{
 header{
     background-image: linear-gradient(to bottom,var(--cor3), var(--cor5));
     height: 230px;
+    width: 100%;
     text-align: center;    
 }
 header > h1{
