--- a/estilos/style.css
+++ b/estilos/style.css
@@ -82,7 +82,7 @@ nav > a:active{
 }
 main{
     background-color: white;
-    min-width:370px;
+    min-width:350px;
     max-width: 800px;
     margin: auto;
     margin-bottom: 30px;
@@ -95,6 +95,7 @@ main  h1{
     font-family: var(--font-android);  
     color: var(--cor4);
     padding: 20px;
+    text-align: center;
 
 }
 main  h2{
